--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
                 <!-- Details Column -->
                 <div class="w-full md:w-1/2 pt-4 md:pt-0">
-                    <h2 class="font-['Poppins'] text-3xl md:text-4xl font-bold text-gray-800 mb-4">Johnathan Michael Smith</h2>
+                    <h2 class="font-['Poppins'] text-3xl md:text-4xl font-bold text-gray-800 mb-4">Julius Anthony</h2>
                     <p class="bg-blue-50 text-gray-700 p-4 rounded-xl mb-6 border-l-4 border-blue-600 shadow-inner">
                         **Last Seen:** Wearing a blue jacket, black jeans, and white sneakers. He has a distinctive tattoo of an **eagle on his right forearm**. If you see him, please approach with care and contact us immediately.
                     </p>
