--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                         <img class="w-full h-full object-cover" src="./assets/images/photo3.jpg" alt="Missing Person Photo 3" loading="lazy" onerror="this.src='https://placehold.co/800x800/f59e0b/ffffff?text=Photo+3+Not+Found'">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img class="w-full h-full object-cover" src="./assets/images/photo4.jpg" alt="Missing Person Photo 4" loading="lazy" onerror="this.src='https://placehold.co/800x800/10b981/ffffff?text=Photo+4+Not+Found'">
+                                        <img class="w-full h-full object-cover" src="./assets/images/photo4.png" alt="Missing Person Photo 4" loading="lazy" onerror="this.src='https://placehold.co/800x800/10b981/ffffff?text=Photo+4+Not+Found'">
                                     </div>
                                 </div>
                                 <div class="swiper-button-next"></div>
