--- a/index.html
+++ b/index.html
@@ -210,21 +210,21 @@
                             <i class="fas fa-ruler-vertical text-blue-600 text-xl mt-1"></i>
                             <div>
                                 <strong class="text-sm text-gray-500 block">Height</strong>
-                                <p class="font-semibold">5'11" (180 cm)</p>
+                                <p class="font-semibold">5'9" (178 cm)</p>
                             </div>
                         </div>
                         <div class="flex items-start gap-3 p-3 bg-gray-50 rounded-lg shadow-sm">
                             <i class="fas fa-weight text-blue-600 text-xl mt-1"></i>
                             <div>
                                 <strong class="text-sm text-gray-500 block">Weight</strong>
-                                <p class="font-semibold">165 lbs (55 kg)</p>
+                                <p class="font-semibold">120 lbs (55 kg)</p>
                             </div>
                         </div>
                         <div class="flex items-start gap-3 p-3 bg-gray-50 rounded-lg shadow-sm">
                             <i class="fas fa-eye text-blue-600 text-xl mt-1"></i>
                             <div>
                                 <strong class="text-sm text-gray-500 block">Eyes</strong>
-                                <p class="font-semibold">Brown</p>
+                                <p class="font-semibold">Black</p>
                             </div>
                         </div>
                         <div class="flex items-start gap-3 p-3 bg-gray-50 rounded-lg shadow-sm">
