--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <p class="text-gray-500 text-center mb-6">Sanath Nagar Missing Persons</p>
                     <div class="flex justify-center">
                         <a href="tel:911" class="flex items-center gap-2 px-6 py-3 bg-red-600 hover:bg-red-700 text-white rounded-full font-bold text-lg transition duration-150 shadow-lg shadow-red-300">
-                            <i class="fas fa-phone"></i> Emergency (100)
+                            <i class="fas fa-phone"></i> Sanathnagar PS (8331013246)
                         </a>
                     </div>
                 </div>
@@ -370,7 +370,7 @@
             </div>
             <div class="text-center text-gray-400 text-sm">
                 <p>&copy; 2025 FindMyFamily. All Rights Reserved.</p>
-                <p class="mt-1">Developed by <span class="text-blue-400 font-semibold">ViNi Solutions</span> | Emergency Hotline: <a href="tel:+1234567890" class="text-yellow-500 hover:text-yellow-400 font-medium">+1 (234) 567-890</a></p>
+                <p class="mt-1">Developed by <span class="text-blue-400 font-semibold">ViNi Solutions</span> | Emergency Hotline: <a href="tel:+9052529798" class="text-yellow-500 hover:text-yellow-400 font-medium">+1 (234) 567-890</a></p>
             </div>
         </div>
     </footer>
