--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     <h3 class="font-['Poppins'] text-xl font-semibold text-center mb-1">Local Police</h3>
                     <p class="text-gray-500 text-center mb-6">Sanath Nagar Missing Persons</p>
                     <div class="flex justify-center">
-                        <a href="tel:911" class="flex items-center gap-2 px-6 py-3 bg-red-600 hover:bg-red-700 text-white rounded-full font-bold text-lg transition duration-150 shadow-lg shadow-red-300">
+                        <a href="tel:8331013246" class="flex items-center gap-2 px-6 py-3 bg-red-600 hover:bg-red-700 text-white rounded-full font-bold text-lg transition duration-150 shadow-lg shadow-red-300">
                             <i class="fas fa-phone"></i> Sanathnagar PS (8331013246)
                         </a>
                     </div>
