--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <p class="text-gray-500 text-center mb-6">Sanath Nagar Missing Persons</p>
                     <div class="flex justify-center">
                         <a href="tel:8331013246" class="flex items-center gap-2 px-6 py-3 bg-red-600 hover:bg-red-700 text-white rounded-full font-bold text-lg transition duration-150 shadow-lg shadow-red-300">
-                            <i class="fas fa-phone"></i> Sanathnagar PS (8331013246)
+                            <i class="fas fa-phone"></i> Sanathnagar PS
                         </a>
                     </div>
                 </div>
